<resources>
    <string name="ams_select_all">Select all</string>
    <string name="clear_query_button">Clear search field</string>
    <string name="join_country_search_hint">Search</string>
    <string name="app_label">Message</string>
    <string name="new_message">New message</string>
    <string name="menu_call">Call</string>
    <string name="menu_search">Search</string>
    <string name="menu_delete_all">Delete all threads</string>
    <string name="menu_delete">Delete thread</string>
    <string name="menu_view">View thread</string>
    <string name="menu_debug_dump">DEBUG DUMP</string>
    <string name="refreshing">Refreshing…</string>
    <string name="no_subject_view">No subject</string>
    <string name="messagelist_sender_self">Me</string>
    <string name="delete_message">Delete</string>
    <string name="expire_on">Expires: %s</string>
    <string name="kilobyte">KB</string>
    <string name="undelivered_msg_dialog_body">Couldn\'t send this message.\nAttempt made: %s.</string>
    <string name="undelivered_sms_dialog_body">Couldn\'t send this message.</string>
    <string name="menu_forward">Forward</string>
    <string name="inline_subject">&lt;Subject: %s&gt;</string>
    <string name="drm_protected_text">* DRM protected text *</string>
    <string name="insufficient_drm_rights">Insufficient DRM rights detected.</string>
    <string name="message_options">Messages</string>
    <string name="done">Done</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="remove_slide">Remove slide</string>
    <string name="add_slide">Add slide</string>
    <string name="add_slide_hint">Touch to create new slide.</string>
    <string name="discard_slideshow">Discard slideshow</string>
    <string name="slide_show_part">Part %1$s/%2$s</string>
    <string name="remove_text">Delete</string>
    <string name="add_picture">Add picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="add_music">Add music</string>
    <string name="remove_music">Remove music</string>
    <string name="add_video">Add video</string>
    <string name="remove_video">Remove video</string>
    <string name="subject_hint">Subject</string>
    <string name="add_attachment">Attach</string>
    <string name="translate">Translate</string>
    <string name="remove">Remove</string>
    <string name="send">Send</string>
    <string name="sms">SMS</string>
    <string name="mms">MMS</string>
    <string name="type_to_compose_sms_message">SMS/MMS</string>
    <string name="open_keyboard_to_compose_message">Open keyboard to type message</string>
    <string name="compressing">Unable to attach the file. The file is too large. The file will be auto edited.</string>
    <string name="unsupported_media_all_format">Unsupported format.</string>
    <string name="select_different_all_media">Select different media.</string>
    <string name="exceed_message_size_limitation">Attention</string>
    <string name="message_too_big_for_video">Size of all message files exceeds maximum upload limit. Only the most recent message files will be attached.</string>
    <string name="failed_to_resize_image">Picture not resized.</string>
    <string name="failed_to_add_all_media">Failed to add attachment.</string>
    <string name="resize_image_error_information">Size of all message files exceeds maximum upload limit. Only the most recent message files will be attached.</string>
    <string name="discard_message">Discard</string>
    <string name="discard_message_reason">Your message will be discarded. No recipients have been selected.</string>
    <string name="has_invalid_recipient">Invalid recipient(s): &lt;%1$s&gt;</string>
    <string name="invalid_destination">Invalid destination address.</string>
    <string name="service_not_activated">Service Not Activated on Network</string>
    <string name="service_message_not_found">Message expired or not available.</string>
    <string name="service_network_problem">Couldn\'t send due to network problem.</string>
    <string name="invalid_recipient_message">Please correct the recipient(s) or they will not receive the message.</string>
    <string name="cannot_send_message">Can\'t send message</string>
    <string name="cannot_send_message_reason">Your message has no valid recipients.</string>
    <string name="cannot_forward_drm_obj">The DRM object included in the message can\'t be forwarded.</string>
    <string name="cannot_add_slide_anymore">Can\'t add more slides.</string>
    <string name="cannot_add_picture_and_video">Can\'t add video and picture to one slide.</string>
    <string name="cannot_save_message">Can\'t save message.</string>
    <string name="too_many_recipients">Message has too many recipients (%1$s). There is a limit of %2$s recipients.</string>
    <string name="too_many_attachments">There is a limit of %1$s attachments. Only the first %2$s will be added.</string>
    <string name="adding_attachments_title">Adding attachments...</string>
    <string name="cancel">Cancel</string>
    <string name="menu_add_recipient">Add recipient</string>
    <string name="chaton_live_buddy_alert_on">Alert on</string>
    <string name="send_invite_message">Send invitation</string>
    <string name="pref_title_auto_transform_to_mms">Auto switch to MMS</string>
    <string name="pref_title_vibrate_on_switching_to_mms">Vibrate on switching to MMS</string>
    <string name="pref_summary_auto_transform_to_mms">Switches to MMS messages if you exceed the maximum number of characters for SMS messages.</string>
    <string name="pref_summary_vibrate_on_switching_to_mms">Vibrate when being switched to MMS during writing messages.</string>
    <string name="pref_title_send_and_receive_sms_mms">Send and receive SMS/MMS</string>
    <string name="pref_summary_send_and_receive_sms_mms">Send and receive SMS/MMS messages via ChatON.</string>
    <string name="pref_setting_title_default_sms_app">Default messaging app</string>
    <string name="pref_summary_check_your_default_sms_app">Check your default messaging app.</string>
    <string name="freesms">Free SMS</string>
    <string name="freesms_use">Use free SMS</string>
    <string name="message_display_settings">Room settings</string>
    <string name="chat_view_menu_info2">Chat info</string>
    <string name="chat_view_menu_delete_chats">Delete chats</string>
    <string name="menu_chat_close">Leave chat room</string>
    <string name="setting_category_privacy">Privacy</string>
    <string name="vcard_type_other">Other</string>
    <string name="setting_birthday">Birthday</string>
    <string name="settings_send_log">Send VOC and Log</string>
    <string name="settings_log_colloctor">Send Collected ChatON Log</string>
    <string name="trunk_title">Album</string>
    <string name="poston_title">PostON</string>
    <string name="mypage_info">Info</string>
    <string name="settings_privacy_showmynumber">Show my number</string>
    <string name="settings_password_lock_text_off">Off</string>
    <string name="settings_password_lock">Password lock</string>
    <string name="room_setting">Room settings</string>
    <string name="backup">Backup</string>
    <string name="chat_view_menu_forward_message">Forward chats as text file</string>
    <string name="qcmd_message">Message</string>
    <string name="privacy_show_my_samsung_account">Show my Samsung account</string>
    <string name="privacy_show_my_samsung_account_detail">All ChatON users can see and search for your Samsung account</string>
    <string name="buddy_contact_sync">Contact sync</string>
    <string name="setting_privacy_show_my_profile_picture">Show my profile picture</string>
    <string name="setting_privacy_blind_samsung_account_description">No ChatON users can see or search for your Samsung account</string>
    <string name="account_connected_device">Connected devices</string>
    <string name="deregister_device">Deregister device</string>
    <string name="chat_view_menu_invite">Invite contacts</string>
    <string name="menu_voice_call">ChatON Voice Chat</string>
    <string name="menu_video_call">ChatON Video Chat</string>
    <string name="setting_notifications">Notifications</string>
    <string name="setting_push_notifications">Push notifications</string>
    <string name="setting_alerts_summary">Receive notifications when you are not using ChatON and show icons in the status bar when you receive push notifications</string>
    <string name="setting_alerts_category_notification_types">Notification types</string>
    <string name="setting_alerts_message_summary">Receive notifications about new messages</string>
    <string name="setting_alerts_recent_story_summary">Receive notifications for adding contacts, changing profile images, PostON comment notifications, etc.</string>
    <string name="setting_notificiation_service_notification">Service information</string>
    <string name="setting_alerts_category_display">Display</string>
    <string name="settings_popup_notifications">Pop-up notifications</string>
    <string name="settings_popup_notifications_summary">Pop-ups inform you when messages arrive and always show simple pop-ups when the screen is locked.</string>
    <string name="setting_alerts_preview">Preview</string>
    <string name="setting_alerts_preview_summary">Preview messages when they arrive</string>
    <string name="setting_alerts_popuptype">Pop-up notification type</string>
    <string name="setting_alert_usepopupwhilescreenisoff">Receive pop-ups while screen off</string>
    <string name="setting_alerts_method">Alert method</string>
    <string name="settings_alert_vibration_melody">Sound and vibration</string>
    <string name="settings_alert_tone">Ringtone</string>
    <string name="settings_mute_alert">Mute alert</string>
    <string name="settings_mute_none">None</string>
    <string name="setting_alerts_category_advancedsetting">Advanced settings</string>
    <string name="setting_alert_new_group_chat">Alert for new group chat</string>
    <string name="setting_alert_new_group_chat_description">Receive alerts when invited to new group chats</string>
    <string name="settings_LED_indicator">LED indicator</string>
    <string name="setting_alerts_ledindicator_summary">LED notifications are only available on devices which support LED functions</string>
    <string name="view_backedup">View backed up chats</string>
    <string name="auto_backup">Auto backup</string>
    <string name="backup_now">Back up now</string>
    <string name="view_backup_description">View the chats you backed up before you last reinstalled ChatON</string>
    <string name="setup_password_description">To use auto backup and back up now, set a password</string>
    <string name="setup_change_password">Set up/change password</string>
    <string name="password_title">Password</string>
    <string name="call_settings">Call settings</string>
    <string name="settings_about_service">About this service</string>
    <string name="settings_version">Version info etc.</string>
    <string name="setting_push_marketing_description">Receive updates on Samsung services and marketing information via push notifications</string>
    <string name="setting_common">Common</string>
    <string name="setting_message">Messages</string>
    <string name="setting_sync">Backup and sync</string>
    <string name="setting_connection">Connection info</string>
    <string name="setting_service">Service</string>
    <string name="setting_smsmms">SMS/MMS</string>
    <string name="setting_spammessages">Spam messages</string>
    <string name="setting_termination_of_service">Deregister from ChatON</string>
    <string name="setting_account">Account</string>
    <string name="live">LIVE</string>
    <string name="manage_contacts">Manage contacts</string>
    <string name="settings_manage_stickers">Manage stickers</string>
    <string name="recent_story_title">Recent story</string>
</resources>