<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="pref_setting_legacy_pref_screen">
    <CheckBoxPreference
        android:title="@string/setting_push_notifications"
        android:key="pref_item_push_notification"
        android:summary="@string/setting_alerts_summary"
        android:defaultValue="true"
        android:contentDescription="@string/setting_push_notifications"/>
    <PreferenceCategory
        android:layout="@layout/layout_preference_category"
        android:title="@string/setting_alerts_category_notification_types"
        android:key="pref_category_notification_types">
        <CheckBoxPreference
            android:title="@string/qcmd_message"
            android:key="pref_item_message"
            android:summary="@string/setting_alerts_message_summary"
            android:contentDescription="@string/qcmd_message"/>
        <CheckBoxPreference
            android:title="@string/recent_story_title"
            android:key="pref_item_updates"
            android:summary="@string/setting_alerts_recent_story_summary"
            android:contentDescription="@string/recent_story_title"/>
        <CheckBoxPreference
            android:title="@string/setting_notificiation_service_notification"
            android:key="pref_item_service_notification"
            android:summary="@string/setting_push_marketing_description"
            android:contentDescription="@string/settings_popup_notifications"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/layout_preference_category"
        android:title="@string/setting_alerts_category_display">
        <CheckBoxPreference
            android:title="@string/settings_popup_notifications"
            android:key="pref_item_use_popup"
            android:summary="@string/settings_popup_notifications_summary"
            android:contentDescription="@string/settings_popup_notifications"/>
        <CheckBoxPreference
            android:title="@string/setting_alerts_preview"
            android:key="pref_item_preview"
            android:summary="@string/setting_alerts_preview_summary"
            android:contentDescription="@string/setting_alerts_preview"/>
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/setting_alerts_popuptype"
            android:key="pref_item_popup_type"
            android:widgetLayout="@layout/preference_widget_arrow"
            android:contentDescription="@string/setting_alerts_popuptype"/>
        <CheckBoxPreference
            android:title="@string/setting_alert_usepopupwhilescreenisoff"
            android:key="pref_item_use_popup_while_screen_off"
            android:contentDescription="@string/setting_alert_usepopupwhilescreenisoff"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/layout_preference_category"
        android:title="@string/settings_alert_vibration_melody">
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/setting_alerts_method"
            android:key="pref_item_mode"
            android:contentDescription="@string/setting_alerts_method"/>
        <com.sec.chaton.settings.RingtonePreference2
            android:title="@string/settings_alert_tone"
            android:key="pref_item_sound_type"
            android:widgetLayout="@layout/preference_widget_arrow"
            android:showDefault="false"
            android:showSilent="true"
            android:contentDescription="@string/settings_alert_tone"/>
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/settings_mute_alert"
            android:key="pref_item_mute"
            android:summary="@string/settings_mute_none"
            android:widgetLayout="@layout/preference_widget_arrow"
            android:contentDescription="@string/settings_mute_alert"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/layout_preference_category"
        android:title="@string/setting_alerts_category_advancedsetting"
        android:key="pref_category_advanced">
        <CheckBoxPreference
            android:title="@string/setting_alert_new_group_chat"
            android:key="pref_item_alert_group_chat"
            android:summary="@string/setting_alert_new_group_chat_description"
            android:contentDescription="@string/setting_alert_new_group_chat"/>
        <CheckBoxPreference
            android:title="@string/settings_LED_indicator"
            android:key="pref_item_led"
            android:summary="@string/setting_alerts_ledindicator_summary"
            android:defaultValue="true"
            android:contentDescription="@string/settings_LED_indicator"/>
    </PreferenceCategory>
</PreferenceScreen>
