<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="pref_setting_legacy_pref_screen">
    <PreferenceCategory
        android:layout="@layout/layout_preference_category"
        android:title="@string/setting_common"
        android:key="pref_setting_common">
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/setting_account"
            android:key="pref_setting_account"/>
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/setting_category_privacy"
            android:key="pref_setting_legacy_privacy"/>
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/setting_notifications"
            android:key="pref_setting_legacy_alerts"/>
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/call_settings"
            android:key="pref_setting_legacy_call_settings"/>
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/manage_contacts"
            android:key="pref_setting_legacy_manage_buddies"/>
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/room_setting"
            android:key="pref_setting_legacy_chat_display"/>
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/settings_manage_stickers"
            android:key="pref_setting_legacy_manage_stickers"/>
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/deregister_device"
            android:key="pref_setting_legacy_delete_account"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/layout_preference_category"
        android:title="@string/setting_message"
        android:key="pref_setting_message_chats">
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/setting_smsmms"
            android:key="pref_setting_sms_mms"/>
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/setting_spammessages"
            android:key="pref_setting_spam_messages"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/layout_preference_category"
        android:title="@string/setting_sync"
        android:key="pref_setting_sync_backup">
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/buddy_contact_sync"
            android:key="pref_setting_legacy_contact_sync"/>
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/backup"
            android:key="pref_setting_backup"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/layout_preference_category"
        android:title="@string/setting_connection"
        android:key="pref_setting_category_connection_info">
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/account_connected_device"
            android:key="pref_setting_legacy_connected_devices"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/layout_preference_category"
        android:title="@string/setting_service"
        android:key="pref_setting_category_service_info">
        <com.sec.chaton.settings.AboutNewNotice
            android:layout="@layout/preference_item_common"
            android:title="@string/settings_version"
            android:key="pref_setting_legacy_about"/>
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/setting_termination_of_service"
            android:key="pref_setting_termination_of_service"/>
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/settings_send_log"
            android:key="pref_setting_legacy_send_log"/>
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/settings_log_colloctor"
            android:key="pref_setting_legacy_log_collector"/>
    </PreferenceCategory>
</PreferenceScreen>
