<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:title="@string/manage_contacts"
        android:key="pref_setting_legacy_manage_buddies"
        android:fragment="com.sec.chaton.settings2.PrefFragmentManageBuddy"/>
    <header
        android:title="@string/setting_category_privacy"
        android:key="pref_setting_legacy_privacy"
        android:fragment="com.sec.chaton.settings2.PrefFragmentPrivacy"/>
    <header
        android:title="@string/setting_notifications"
        android:key="pref_setting_legacy_alerts"
        android:fragment="com.sec.chaton.settings2.PrefFragmentAlerts"/>
    <header
        android:title="@string/room_setting"
        android:key="pref_setting_legacy_chat_display"
        android:fragment="com.sec.chaton.settings2.PrefFragmentChats"/>
    <header
        android:id="@+id/pref_setting_legacy_call_settings_id"
        android:title="@string/call_settings"
        android:key="pref_setting_legacy_call_settings"/>
    <header
        android:title="@string/account_connected_device"
        android:key="pref_setting_legacy_connected_devices"
        android:fragment="com.sec.chaton.settings2.PrefFragmentConnectedDevice"/>
    <header
        android:title="@string/backup"
        android:key="pref_setting_backup"
        android:fragment="com.sec.chaton.settings2.PrefFragmentBackup"/>
    <header
        android:title="@string/buddy_contact_sync"
        android:key="pref_setting_legacy_contact_sync"
        android:fragment="com.sec.chaton.settings2.PrefFragmentContactSync"/>
    <header
        android:title="@string/settings_about_service"
        android:key="pref_setting_legacy_about"
        android:fragment="com.sec.chaton.settings2.PrefFragmentAbout"/>
    <header
        android:title="@string/deregister_device"
        android:key="pref_setting_deregister"
        android:fragment="com.sec.chaton.settings2.PrefFragmentDeregister"/>
    <header
        android:id="@+id/pref_setting_legacy_send_log_id"
        android:title="@string/settings_send_log"
        android:key="pref_setting_legacy_send_log"/>
</preference-headers>
