<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/layout_preference_category"
        android:title="@string/password_title"
        android:key="pref_category_password">
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/settings_password_lock"
            android:key="pref_item_password_lock"
            android:summary="@string/settings_password_lock_text_off"
            android:defaultValue="false"
            android:contentDescription="@string/settings_password_lock"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/layout_preference_category"
        android:title="@string/mypage_info"
        android:key="pref_category_info">
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/setting_privacy_show_my_profile_picture"
            android:key="pref_item_show_profileimage"
            android:widgetLayout="@layout/preference_widget_arrow"
            android:contentDescription="@string/setting_privacy_show_my_profile_picture"/>
        <CheckBoxPreference
            android:title="@string/settings_privacy_showmynumber"
            android:key="pref_item_phonenumber"
            android:contentDescription="@string/settings_privacy_showmynumber"/>
        <CheckBoxPreference
            android:title="@string/privacy_show_my_samsung_account"
            android:key="pref_item_samsung_account"
            android:summaryOn="@string/privacy_show_my_samsung_account_detail"
            android:summaryOff="@string/setting_privacy_blind_samsung_account_description"
            android:contentDescription="@string/privacy_show_my_samsung_account"/>
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/setting_birthday"
            android:key="pref_item_birthday"
            android:contentDescription="@string/setting_birthday"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/layout_preference_category"
        android:title="@string/vcard_type_other"
        android:key="pref_category_other">
        <Preference
            android:layout="@layout/preference_item_common"
            android:title="@string/poston_title"
            android:key="pref_item_poston"
            android:contentDescription="@string/poston_title"/>
    </PreferenceCategory>
</PreferenceScreen>
