<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/chat_menu_group">
        <item
            android:icon="@drawable/more_option_invitebuddy_white"
            android:id="@+id/chat_menu_invitebuddy"
            android:orderInCategory="1"
            android:title="@string/chat_view_menu_invite"
            android:showAsAction="never"/>
        <item
            android:icon="@drawable/more_option_chatinfo_white"
            android:id="@+id/chat_menu_info"
            android:orderInCategory="2"
            android:title="@string/chat_view_menu_info2"
            android:showAsAction="never"/>
        <item
            android:icon="@drawable/more_option_alert_white"
            android:id="@+id/chat_menu_alert"
            android:orderInCategory="3"
            android:title="@string/chaton_live_buddy_alert_on"
            android:showAsAction="never"/>
        <item
            android:icon="@drawable/more_option_chaton_translator_white"
            android:id="@+id/chat_menu_translate"
            android:orderInCategory="4"
            android:title="@string/translate"
            android:showAsAction="never"/>
        <item
            android:icon="@drawable/more_option_delete_white"
            android:id="@+id/chat_menu_delete"
            android:orderInCategory="5"
            android:title="@string/chat_view_menu_delete_chats"
            android:showAsAction="never"/>
        <item
            android:icon="@drawable/more_option_share_white"
            android:id="@+id/chat_menu_forward"
            android:orderInCategory="6"
            android:title="@string/chat_view_menu_forward_message"
            android:showAsAction="never"/>
        <item
            android:icon="@drawable/more_option_backupmessage_white"
            android:id="@+id/chat_menu_export"
            android:orderInCategory="7"
            android:title="@string/backup"
            android:showAsAction="never"/>
        <item
            android:icon="@drawable/more_option_chaton_voice_white"
            android:id="@+id/chat_menu_chatonvoice"
            android:orderInCategory="8"
            android:title="@string/menu_voice_call"
            android:showAsAction="never"/>
        <item
            android:icon="@drawable/more_option_chaton_video_white"
            android:id="@+id/chat_menu_chatonvideo"
            android:orderInCategory="9"
            android:title="@string/menu_video_call"
            android:showAsAction="never"/>
        <item
            android:icon="@drawable/more_option_setting_white"
            android:id="@+id/chat_menu_setting"
            android:orderInCategory="10"
            android:title="@string/room_setting"
            android:showAsAction="never"/>
        <item
            android:icon="@drawable/more_option_closechat_white"
            android:id="@+id/chat_menu_closechat"
            android:orderInCategory="11"
            android:title="@string/menu_chat_close"
            android:showAsAction="never"/>
        <item
            android:icon="@drawable/actionbar_ic_trunk"
            android:id="@+id/chat_menu_trunk"
            android:title="@string/trunk_title"
            android:showAsAction="always"/>
        <item
            android:icon="@drawable/actionbar_ic_livepartner"
            android:id="@+id/chat_menu_livepartner"
            android:title="@string/live"
            android:showAsAction="always"/>
    </group>
    <group android:id="@+id/chat_menu_group_delete">
        <item
            android:id="@+id/chat_menu_delete_cancel"
            android:orderInCategory="1"
            android:title="@string/cancel"
            android:showAsAction="always"/>
        <item
            android:id="@+id/chat_menu_delete_confirm"
            android:orderInCategory="1"
            android:title="@string/done"
            android:showAsAction="always"/>
    </group>
</menu>
