<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/composer_menu_group">
        <item
            android:icon="@drawable/sms_actionbar_ic_call"
            android:id="@+id/composer_menu_call_recipient"
            android:orderInCategory="1"
            android:title="@string/menu_call"
            android:showAsAction="always"/>
        <item
            android:id="@+id/composer_menu_add_recipient"
            android:orderInCategory="2"
            android:title="@string/menu_add_recipient"
            android:showAsAction="never"/>
        <item
            android:id="@+id/composer_menu_send_invitation"
            android:orderInCategory="3"
            android:title="@string/send_invite_message"
            android:showAsAction="never"/>
        <item
            android:icon="@android:drawable/ic_menu_info_details"
            android:id="@+id/composer_menu_message_room_info"
            android:orderInCategory="4"
            android:title="@string/chat_view_menu_info2"
            android:showAsAction="never"/>
        <item
            android:id="@+id/composer_menu_alert"
            android:orderInCategory="5"
            android:title="@string/chaton_live_buddy_alert_on"
            android:showAsAction="never"/>
        <item
            android:id="@+id/chat_menu_setting"
            android:orderInCategory="6"
            android:title="@string/message_display_settings"
            android:showAsAction="never"/>
        <item
            android:id="@+id/composer_menu_delete_messages"
            android:orderInCategory="7"
            android:title="@string/chat_view_menu_delete_chats"
            android:showAsAction="never"/>
        <item
            android:icon="@android:drawable/ic_menu_delete"
            android:id="@+id/composer_menu_delete_thread"
            android:orderInCategory="8"
            android:title="@string/menu_chat_close"
            android:showAsAction="never"/>
        <item
            android:id="@+id/composer_menu_debug_dumd"
            android:orderInCategory="9"
            android:title="@string/menu_debug_dump"
            android:showAsAction="never"/>
    </group>
    <group android:id="@+id/composer_menu_group_delete">
        <item
            android:id="@+id/composer_menu_delete_cancel"
            android:orderInCategory="1"
            android:title="@string/cancel"
            android:showAsAction="always"/>
        <item
            android:id="@+id/composer_menu_delete_confirm"
            android:orderInCategory="2"
            android:title="@string/done"
            android:showAsAction="always"/>
    </group>
</menu>
